Application form init

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@saas-ui/react": "^2.8.7",
     "@simplewebauthn/browser": "^10.0.0",
     "@simplewebauthn/server": "^10.0.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
     "resend": "^3.4.0",
+    "select-philippines-address": "^1.0.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
