--- a/package.json
+++ b/package.json
@@ -6,39 +6,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
-    "@auth0/nextjs-auth0": "^3.5.0",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.9.0",
+    "@nextui-org/react": "^2.4.2",
     "@prisma/client": "^5.16.1",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@saas-ui/react": "^2.8.7",
-    "@simplewebauthn/browser": "^10.0.0",
-    "@simplewebauthn/server": "^10.0.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
-    "framer-motion": "^11.2.13",
+    "framer-motion": "^11.3.5",
     "html-react-parser": "^5.1.10",
     "input-otp": "^1.2.4",
+    "jest-mock-extended": "^3.0.7",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
-    "next-auth": "^5.0.0-beta.19",
-    "prisma": "^5.16.1",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
+    "recharts": "^2.13.0-alpha.4",
     "resend": "^3.4.0",
     "select-philippines-address": "^1.0.6",
     "tailwind-merge": "^2.3.0",
@@ -47,18 +52,24 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-html-parser": "^2.0.6",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
-    "eslint": "^9",
+    "eslint": "^8.37.0",
     "eslint-config-next": "14.2.4",
+    "jest": "^29.7.0",
+    "next-auth": "^5.0.0-beta.19",
     "postcss": "^8",
+    "prisma": "^5.16.2",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.2.2",
     "typescript": "^5"
   }
 }
